alignment issues better resolved

--- a/src/comp/Know/know.css
+++ b/src/comp/Know/know.css
@@ -38,15 +38,14 @@
     box-shadow: 0px 4px 100px rgba(0, 0, 0, 0.25);
 }
 
-.card h5 {
+#h5{
+    font-size: 24px;
+    font-weight: 600;
     position: absolute;
-    top: 151px;
-    left: 25%;
-    font-size: 1.7rem;
-}
-
-.sec h5 {
-    left: 30%;
+    bottom: 45%;
+    text-align: center;
+    width: 100%;
+    color: #2E2C2C;
 }
 
 .small{
