--- a/src/comp/Man/man.css
+++ b/src/comp/Man/man.css
@@ -18,11 +18,12 @@
 
 }
 
-.Man h3{
-    position: absolute;
+#h3{
     font-family: 'Stereomantic';
     font-size: 6rem;
     font-weight: 400;
-    bottom: 22px;
-    left: 35%;
+    position: absolute;
+    bottom: 15px;
+    text-align: center;
+    width: 100%;
 }
